WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255487
-webkit-line-clamp results overlap blocks even if overflow: hidden, when mixing <span> and <div>.
https://bugs.webkit.org/show_bug.cgi?id=255487
Summary
-webkit-line-clamp results overlap blocks even if overflow: hidden, when mixi...
Ethan Wong
Reported
2023-04-15 10:31:42 PDT
Created
attachment 465927
[details]
Case 1 to reproduce this issue. -webkit-line-clamp results overlap blocks even if overflow: hidden, when mixing <span> hand <div>.
Attachments
Case 1 to reproduce this issue.
(1.98 KB, text/html)
2023-04-15 10:31 PDT
,
Ethan Wong
no flags
Details
Screenshot of Case 1 in Safari 16.3, macOS 13.2.1
(215.80 KB, image/png)
2023-04-15 10:32 PDT
,
Ethan Wong
no flags
Details
Screenshot of Case 1 in Safari 16.4, macOS 13.3
(398.55 KB, image/png)
2023-04-15 10:33 PDT
,
Ethan Wong
no flags
Details
Case 2 to reproduce this issue.
(1.88 KB, text/html)
2023-04-15 10:33 PDT
,
Ethan Wong
no flags
Details
Case 2 in Chrome 112
(284.44 KB, image/png)
2023-04-15 10:34 PDT
,
Ethan Wong
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Ethan Wong
Comment 1
2023-04-15 10:32:43 PDT
Created
attachment 465928
[details]
Screenshot of Case 1 in Safari 16.3, macOS 13.2.1
Ethan Wong
Comment 2
2023-04-15 10:33:10 PDT
Created
attachment 465929
[details]
Screenshot of Case 1 in Safari 16.4, macOS 13.3
Ethan Wong
Comment 3
2023-04-15 10:33:38 PDT
Created
attachment 465930
[details]
Case 2 to reproduce this issue.
Ethan Wong
Comment 4
2023-04-15 10:34:26 PDT
Created
attachment 465931
[details]
Case 2 in Chrome 112
Ethan Wong
Comment 5
2023-04-15 10:40:41 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/12772
Radar WebKit Bug Importer
Comment 6
2023-04-16 18:04:44 PDT
<
rdar://problem/108116069
>
EWS
Comment 7
2023-04-18 10:11:42 PDT
Committed
263079@main
(71f363c22510): <
https://commits.webkit.org/263079@main
> Reviewed commits have been landed. Closing PR #12772 and removing active labels.
EWS
Comment 8
2023-04-25 03:20:49 PDT
Committed
263360@main
(59088ba85057): <
https://commits.webkit.org/263360@main
> Reviewed commits have been landed. Closing PR #12973 and removing active labels.
Ahmad Saleem
Comment 9
2023-04-25 08:52:37 PDT
***
Bug 255728
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug